// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileCompany нажали FilterActive 1`] = `
<div
  className="MobileCompany"
>
  <div
    className="FilterButtons"
  >
    <button
      className="FilterAll"
      onClick={[Function]}
    >
      Все
    </button>
    <button
      className="FilterActive"
      onClick={[Function]}
    >
      Активные
    </button>
    <button
      className="FilterBlocked"
      onClick={[Function]}
    >
      Заблокированные
    </button>
  </div>
  <div
    className="MobileCompanyClients"
  >
    <table>
      <thead>
        <tr
          className="ClientsHeader"
        >
          <td>
            Фамилия
          </td>
          <td>
            Имя
          </td>
          <td>
            Отчество
          </td>
          <td>
            Баланс
          </td>
          <td>
            Статус
          </td>
          <td>
            Редактировать
          </td>
          <td>
            Удалить
          </td>
        </tr>
      </thead>
      <tbody>
        <tr
          className="MobileClient"
        >
          <td
            className="Str"
          >
            Иванов
          </td>
          <td
            className="Str"
          >
            Иван
          </td>
          <td
            className="Str"
          >
            Иванович
          </td>
          <td
            className="MobileClientBalance"
          >
            200
          </td>
          <td
            className="MobileClientBalance MobileClientBalanceActive"
          >
            active
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td
            className="Str"
          >
            Сидоров
          </td>
          <td
            className="Str"
          >
            Сидор
          </td>
          <td
            className="Str"
          >
            Сидорович
          </td>
          <td
            className="MobileClientBalance"
          >
            250
          </td>
          <td
            className="MobileClientBalance MobileClientBalanceActive"
          >
            active
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td
            className="Str"
          >
            Петров
          </td>
          <td
            className="Str"
          >
            Петр
          </td>
          <td
            className="Str"
          >
            Петрович
          </td>
          <td
            className="MobileClientBalance"
          >
            180
          </td>
          <td
            className="MobileClientBalance MobileClientBalanceActive"
          >
            active
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
      </tbody>
    </table>
    <input
      className="AddButton"
      onClick={[Function]}
      type="button"
      value="Добавить клиента"
    />
  </div>
</div>
`;

exports[`MobileCompany нажали FilterAll 1`] = `
<div
  className="MobileCompany"
>
  <div
    className="FilterButtons"
  >
    <button
      className="FilterAll"
      onClick={[Function]}
    >
      Все
    </button>
    <button
      className="FilterActive"
      onClick={[Function]}
    >
      Активные
    </button>
    <button
      className="FilterBlocked"
      onClick={[Function]}
    >
      Заблокированные
    </button>
  </div>
  <div
    className="MobileCompanyClients"
  >
    <table>
      <thead>
        <tr
          className="ClientsHeader"
        >
          <td>
            Фамилия
          </td>
          <td>
            Имя
          </td>
          <td>
            Отчество
          </td>
          <td>
            Баланс
          </td>
          <td>
            Статус
          </td>
          <td>
            Редактировать
          </td>
          <td>
            Удалить
          </td>
        </tr>
      </thead>
      <tbody>
        <tr
          className="MobileClient"
        >
          <td
            className="Str"
          >
            Иванов
          </td>
          <td
            className="Str"
          >
            Иван
          </td>
          <td
            className="Str"
          >
            Иванович
          </td>
          <td
            className="MobileClientBalance"
          >
            200
          </td>
          <td
            className="MobileClientBalance MobileClientBalanceActive"
          >
            active
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td
            className="Str"
          >
            Сидоров
          </td>
          <td
            className="Str"
          >
            Сидор
          </td>
          <td
            className="Str"
          >
            Сидорович
          </td>
          <td
            className="MobileClientBalance"
          >
            250
          </td>
          <td
            className="MobileClientBalance MobileClientBalanceActive"
          >
            active
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td
            className="Str"
          >
            Петров
          </td>
          <td
            className="Str"
          >
            Петр
          </td>
          <td
            className="Str"
          >
            Петрович
          </td>
          <td
            className="MobileClientBalance"
          >
            180
          </td>
          <td
            className="MobileClientBalance MobileClientBalanceActive"
          >
            active
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td
            className="Str"
          >
            Григорьев
          </td>
          <td
            className="Str"
          >
            Григорий
          </td>
          <td
            className="Str"
          >
            Григорьевич
          </td>
          <td
            className="MobileClientBalance"
          >
            -220
          </td>
          <td
            className="MobileClientBalance MobileClientBalanceBlocked"
          >
            blocked
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
      </tbody>
    </table>
    <input
      className="AddButton"
      onClick={[Function]}
      type="button"
      value="Добавить клиента"
    />
  </div>
</div>
`;

exports[`MobileCompany нажали FilterBlocked 1`] = `
<div
  className="MobileCompany"
>
  <div
    className="FilterButtons"
  >
    <button
      className="FilterAll"
      onClick={[Function]}
    >
      Все
    </button>
    <button
      className="FilterActive"
      onClick={[Function]}
    >
      Активные
    </button>
    <button
      className="FilterBlocked"
      onClick={[Function]}
    >
      Заблокированные
    </button>
  </div>
  <div
    className="MobileCompanyClients"
  >
    <table>
      <thead>
        <tr
          className="ClientsHeader"
        >
          <td>
            Фамилия
          </td>
          <td>
            Имя
          </td>
          <td>
            Отчество
          </td>
          <td>
            Баланс
          </td>
          <td>
            Статус
          </td>
          <td>
            Редактировать
          </td>
          <td>
            Удалить
          </td>
        </tr>
      </thead>
      <tbody>
        <tr
          className="MobileClient"
        >
          <td
            className="Str"
          >
            Григорьев
          </td>
          <td
            className="Str"
          >
            Григорий
          </td>
          <td
            className="Str"
          >
            Григорьевич
          </td>
          <td
            className="MobileClientBalance"
          >
            -220
          </td>
          <td
            className="MobileClientBalance MobileClientBalanceBlocked"
          >
            blocked
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="Control"
          >
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
      </tbody>
    </table>
    <input
      className="AddButton"
      onClick={[Function]}
      type="button"
      value="Добавить клиента"
    />
  </div>
</div>
`;
